CMake + find_program()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,32 +1,49 @@
-
 PROJECT(MRSOM)
 
-MESSAGE( STATUS "-------------------------------------------------------" )
-
-SET( ${PROJECT_NAME}_MAJOR_VERSION 0 )
-SET( ${PROJECT_NAME}_MINOR_VERSION 0 )
-SET( ${PROJECT_NAME}_PATCH_LEVEL 9 )
+SET( ${PROJECT_NAME}_MAJOR_VERSION 2 )
+SET( ${PROJECT_NAME}_MINOR_VERSION 1 )
+SET( ${PROJECT_NAME}_PATCH_LEVEL 0 )
 
 cmake_minimum_required(VERSION 2.6)
 
 #set(MPI_ROOT /export/openmpi)
 #set(MPI_COMPILER ${MPI_ROOT}/bin/mpicxx)
 #set(MPI_LIBRARY MPI_LIBRARY-NOTFOUND) 
-find_package(MPI)
-find_package(Pthreads)
+find_package(MPI REQUIRED)
+#find_package(Pthreads)
 
-SET(CMAKE_C_FLAGS "-g -Wall -pg -O -I./mrmpi")
-SET(CMAKE_CXX_FLAGS "-g -Wall -pg -O -I./mrmpi")
-SET(CMAKE_C_COMPILER /export/openmpi/bin/mpicc)
-SET(CMAKE_CXX_COMPILER /export/openmpi/bin/mpicxx)
+if (MPI_FOUND)   
+    find_program(MPI_C_COMPILER NAMES mpicc DOC "MPI C compiler.")
+    mark_as_advanced(MPI_C_COMPILER)
+    if (MPI_C_COMPILER)
+        set(CMAKE_C_COMPILER ${MPI_C_COMPILER})
+    endif (MPI_C_COMPILER)
 
-#CMAKE_EXE_LINKER_FLAGS
-#CMAKE_SHARED_LINKER_FLAGS
-#CMAKE_MODULE_LINKER_FLAGS
-SET(CMAKE_EXE_LINKER_FLAGS "-g -O -L./mrmpi")
+    find_program(MPI_CXX_COMPILER NAMES mpic++ mpicxx mpiCC DOC "MPI C++ compiler.")
+    mark_as_advanced(MPI_CXX_COMPILER)
+    if (MPI_CXX_COMPILER)
+        set(CMAKE_CXX_COMPILER ${MPI_CXX_COMPILER})
+    endif (MPI_CXX_COMPILER)
+  
+    #SET(CMAKE_C_FLAGS "-g -Wall -pg -O -I./mrmpi")
+    #SET(CMAKE_CXX_FLAGS "-g -Wall -pg -O -I./mrmpi")
+    #SET(CMAKE_C_FLAGS "-Wall -pg -O -I./mrmpi")
+    #SET(CMAKE_CXX_FLAGS "-Wall -pg -O -I./mrmpi")
+    #SET(CMAKE_C_COMPILER /export/openmpi/bin/mpicc)
+    #SET(CMAKE_CXX_COMPILER /export/openmpi/bin/mpicxx)
+    #SET(CMAKE_C_COMPILER MPI_C_COMPILER)
+    #SET(CMAKE_CXX_COMPILER MPI_CXX_COMPILER)
 
-add_subdirectory(src)
-add_subdirectory(src/mrmpi)
+    #CMAKE_EXE_LINKER_FLAGS
+    #CMAKE_SHARED_LINKER_FLAGS
+    #CMAKE_MODULE_LINKER_FLAGS
+    #SET(CMAKE_EXE_LINKER_FLAGS "-g -O -L./mrmpi")
+
+    add_subdirectory(src)
+    add_subdirectory(src/mrmpi)
+else (MPI_FOUND) 
+    message(FATAL_ERROR "OpenMPI is not found on this system")    
+endif (MPI_FOUND)   
 
 #SET(CCFLAGS "-g -Wall -O -I../mrmpi")
 #SET(CMAKE_CXX_FLAGS "-g -Wall ")
