--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,8 +15,9 @@ link_directories(${MRSOM_BINARY_DIR}/mrmpi)
 #SET(ARCHIVE "ar")
 #SET(ARFLAGS "-rc")
 LINK_DIRECTORIES( ${LINK_DIRECTORIES} ${MRSOM_BINARY_DIR}/mrmpi )
-add_executable(mrsom mrsom.cpp)
 add_executable(som som.cpp)
+
+add_executable(mrsom mrsom.cpp)
 target_link_libraries(mrsom mpi)  
 target_link_libraries(mrsom mrmpi)
   
@@ -24,3 +25,10 @@ add_executable(mrsom2 mrsom2.cpp)
 target_link_libraries(mrsom2 mpi)  
 target_link_libraries(mrsom2 mrmpi)
 
+add_executable(mrsom0713 mrsom0713.cpp)
+target_link_libraries(mrsom0713 mpi)  
+target_link_libraries(mrsom0713 mrmpi)
+
+add_executable(mrsom3 mrsom3.cpp)
+target_link_libraries(mrsom3 mpi)  
+target_link_libraries(mrsom3 mrmpi)
