Add cmake support for txt2bin which supports to convert ASCII text input feature vector file into a binary format.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -116,7 +116,7 @@ target_link_libraries(mrsom boost_iostreams)
 target_link_libraries(mrsom boost_filesystem)
 target_link_libraries(mrsom boost_program_options)
 
-add_executable(txt2bin txt2bin.cpp)
+#add_executable(txt2bin txt2bin.cpp) -> moved to CMakeLists.txt in ./txt2bin
 
 #set(CMAKE_BUILD_TYPE Release)
 
