Clean up; Update examples;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,6 @@ SET( ${PROJECT_NAME}_PATCH_LEVEL 0 )
 
 cmake_minimum_required(VERSION 2.6)
  
-#find_package(Pthreads)
-
 # Search for MPI ###########################
 find_package( MPI REQUIRED )
 if (MPI_FOUND)  
@@ -35,7 +33,10 @@ else (MPI_FOUND)
 endif (MPI_FOUND)   
 
 # Search for Boost ###########################
-#set(BOOST_ROOT "/usr")
+
+# To specify user-defined Boost lib location,
+#set(BOOST_ROOT "/home/ssul/work/distros2/boost/boost_1_45_0")
+
 find_package( Boost REQUIRED )
 
 if (Boost_FOUND)
@@ -56,56 +57,4 @@ add_subdirectory(src)
 add_subdirectory(src/mrmpi)
 add_subdirectory(src/txt2bin)
 
-#SET(CCFLAGS "-g -Wall -O -I../mrmpi")
-#SET(CMAKE_CXX_FLAGS "-g -Wall ")
-#SET(LINK "/export/openmpi/bin/mpicxx /export/mrmpi/lib")
-#SET(LINKFLAGS "-g -O -L../mrmpi")
-#SET(USRLIB "-lmrmpi")
-#SET(SYSLIB "-lpthread")
-#SET(LIB "/export/mrmpi/libmrmpi.a")
-#SET(DEPFLAGS "-M")
-#SET(ARCHIVE "ar")
-#SET(ARFLAGS "-rc")
-
-
-##SET(SRC mrsom)
-##ADD_EXECUTABLE(mrsom ${SRC})
-##SET(CMAKE_C_COMPILER /export/openmpi/bin/mpicc)
-##SET(CMAKE_CXX_COMPILER /export/openmpi/bin/mpicxx)
-##target_link_libraries(mrsom mpi)
- 
-###add_definitions(-Wall -W -ggdb -I./mrmpi)
-###INSTALL(FILES mrsom DESTINATION ./bin)
- 
-#### Top-Level CmakeLists.txt
-###PROJECT( mrsom )
-###ADD_SUBDIRECTORY( node )
-###ADD_SUBDIRECTORY( som )
-##ADD_SUBDIRECTORY( mrmpi )
-
-### specific to me
-##include_directories( /export/openmpi/include )
-##include_directories(${MRSOM_SOURCE_DIR}/mrmpi)
-##link_directories(${MRSOM_BINARY_DIR}/mrmpi)
-##LINK_LIBRARIES(${MRSOM_SOURCE_DIR}/mrmpi/libmrmpi.a)
-
-##find_package(openmpi)
-##find_package(GLUT)
-#find_package(OpenGL)
-
-#ADD_EXECUTABLE(mrsom mrsom.cpp)
-#SET(CMAKE_C_COMPILER /export/openmpi/bin/mpicc)
-#SET(CMAKE_CXX_COMPILER /export/openmpi/bin/mpicxx)
-##SET(CCFLAGS "-g -Wall -O -I./mrmpi")
-##SET(CMAKE_CXX_FLAGS "-g -Wall")
-##SET(LINK /export/openmpi/bin/mpicxx)
-##SET(LINKFLAGS "-g -O -L./mrmpi")
-##SET(USRLIB "-lmrmpi")
-##SET(SYSLIB "-lpthread")
-##SET(LIB "./mrmpi/libmrmpi.a")
-
-#target_link_libraries(mrsom mpi)
-#target_link_libraries(mrsom pthread)
-##target_link_libraries(mrsom ./mrmpi/libmrmpi.a)
-#target_link_libraries(mrsom ./mrmpi)
-##add_definitions(-Wall -W -ggdb -I./mrmpi -L/export/openmpi/lib -L./mrmpi)
+# EOF
