--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,24 +1,25 @@
+### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ##
+#
+#   See COPYING file distributed along with the MGTAXA package for the
+#   copyright and license terms.
+#
+### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ##
+
 include_directories(${MRSOM_SOURCE_DIR}/mrmpi)
 link_directories(${MRSOM_BINARY_DIR}/mrmpi)
 LINK_DIRECTORIES(${LINK_DIRECTORIES} ${MRSOM_BINARY_DIR}/mrmpi)
 
-add_executable(mrsom mrsom.cpp)
-target_link_libraries(mrsom mpi)  
-target_link_libraries(mrsom mrmpi)
-target_link_libraries(mrsom boost_iostreams)
-target_link_libraries(mrsom boost_filesystem)
-target_link_libraries(mrsom boost_program_options)
-# For Ranger
+add_executable(mrsom2 mrsom2.cpp mrsom2.hpp)
+target_link_libraries(mrsom2 mpi)  
+target_link_libraries(mrsom2 mrmpi)
+target_link_libraries(mrsom2 boost_iostreams)
+target_link_libraries(mrsom2 boost_filesystem)
+target_link_libraries(mrsom2 boost_program_options)
+
+# For Ranger at TACC
 #target_link_libraries(mrsom9 boost_iostreams-gcc44-mt)
 #target_link_libraries(mrsom9 boost_filesystem-gcc44-mt)
 #target_link_libraries(mrsom boost_program_options-gcc44-mt)
-
-add_executable(mrsom-sparse mrsom-sparse.cpp)
-target_link_libraries(mrsom-sparse mpi)  
-target_link_libraries(mrsom-sparse mrmpi)
-target_link_libraries(mrsom-sparse boost_iostreams)
-target_link_libraries(mrsom-sparse boost_filesystem)
-target_link_libraries(mrsom-sparse boost_program_options)
 
 #set(CMAKE_BUILD_TYPE Release)
 SET(CMAKE_BUILD_TYPE distribtion)
