Squashed commit of the following:
commit 729692e4423777d5c2c943dfeaf5641ba5eaff9d
Author: Seung-Jin Sul <sulsj0270@hotmail.com>
Date:   Fri Sep 16 12:10:15 2011 -0400

    Cleanup before merge;

commit abc08a3e66c38bbded845cc314f828de28bf978e
Author: Seung-Jin Sul <sulsj0270@hotmail.com>
Date:   Fri Sep 16 11:50:19 2011 -0400

    Clean up before merge;

commit 374053785773d0b96c2f7a8b7704fbe71654b5f2
Author: Seung-Jin Sul <sulsj0270@hotmail.com>
Date:   Wed Sep 14 14:19:20 2011 -0400

    Add features to support for sparse matrix;

commit dee3b664dbac38e7a56885a5c506a4b4aafdf4a0
Author: Seung-Jin Sul <sulsj0270@hotmail.com>
Date:   Tue Sep 6 10:36:37 2011 -0400

    Add mrsom-sparse branch for testing mrsom-sparse.cpp from Peter Wittek;

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,16 +1,25 @@
+### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ##
+#
+#   See COPYING file distributed along with the MGTAXA package for the
+#   copyright and license terms.
+#
+### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ### ##
+
 include_directories(${MRSOM_SOURCE_DIR}/mrmpi)
 link_directories(${MRSOM_BINARY_DIR}/mrmpi)
 LINK_DIRECTORIES(${LINK_DIRECTORIES} ${MRSOM_BINARY_DIR}/mrmpi)
 
-add_executable(mrsom mrsom.cpp)
+add_executable(mrsom mrsom.cpp mrsom.hpp)
 target_link_libraries(mrsom mpi)  
 target_link_libraries(mrsom mrmpi)
+
 target_link_libraries(mrsom boost_iostreams)
 target_link_libraries(mrsom boost_filesystem)
 target_link_libraries(mrsom boost_program_options)
-# For Ranger
-#target_link_libraries(mrsom9 boost_iostreams-gcc44-mt)
-#target_link_libraries(mrsom9 boost_filesystem-gcc44-mt)
+
+# For Ranger at TACC
+#target_link_libraries(mrsom boost_iostreams-gcc44-mt)
+#target_link_libraries(mrsom boost_filesystem-gcc44-mt)
 #target_link_libraries(mrsom boost_program_options-gcc44-mt)
 
 #set(CMAKE_BUILD_TYPE Release)
